theme.css
/* ... */
.bigtitle .frontground a img {
  width: 100%;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
#main {
  padding-top: 7em; /* to fix anchor element*/
  margin: 4em auto 4em auto;
  width: 90%;
  display: grid;
  grid-template: auto auto / 1fr 2.5fr;
  grid-gap: 1em;
}
#main #contacts {
  height: fit-content;
  grid-area: 1 / 1 / span 2 / span 1;
  margin-top: -7em;
  border-top-style: solid;
  border-color: white;
  border-top-width: 7em;
  padding: 1em; /* to fix anchor element*/
  background: #f1f1f1;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
#main #contacts p {
  text-align: right;
}
#main #contacts h1 {
  text-align: center;
  margin-bottom: 1em;
}
#main #contacts h4 {
  display: inline-block;
}
#main #contacts a {
  display: block;
  align-self: center;
  text-align: center;
  margin: auto;
}
#main #contacts .common_info {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
#main #contacts .common_info .timetable {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#main #contacts .common_info p {
  position: absolute;
  top: 1.4em;
  text-align: left;
  border-radius: 8px;
  background-color: #b3b3b363;
  overflow: hidden;
  transition: .4s ease;
  margin-bottom: 1em;
  color: black;
  padding: 0.5em;
  width: 220%;
  z-index: 3;
  opacity: 0;
  pointer-events: none;

}
#main #contacts .common_info h5 {
  display: block;
  text-align: center;
  color: black;
  border-radius: 8px;
  background-color: #b3b3b363;
  height: 2em;
  line-height: 2em;
  width: 7em;
  margin: .5em;
  transition: .4s ease;
}
#main #contacts .common_info .timetable:hover h5, #main #contacts .common_info .timetable:active h5{
  background-color: dodgerblue;
  color: white;
  cursor: pointer;
}
#main #contacts .common_info .timetable:hover p {
  background-color: #d6d6d6;
  opacity: 1;
  pointer-events: auto;
  transform: translateY(1em)
}
#main #contacts .infocontact p i {
  font-size: 1em;
  transition: .4s ease;
}
#main #contacts a[alt="Farnesina Map"] img{
  width: 100%;
  border-style: solid;
  border-color: #cfcfcf;

}
#main #contacts .infocontact {
  margin-top: 1em;
  margin-bottom: 1em;
}
#main #contacts .infocontact a:hover p {
  text-decoration: underline;
}
#main #contacts .infocontact a:hover p i{
  transform: translateY(0.3em);
  color: dodgerblue;
}
#main #contacts :not(.map) a img {
  width: 20%;
  animation: bounce 1s;
  animation-delay: 0.7s;
  transition: .5s ease;
}
#main #contacts .social {
  display: flex;
  justify-content: center;
  margin: 1em;
}
#main #contacts .social a {
 width: 25%;
}
#main #contacts .social a img {
  width: 70%;  
}
#main #contacts :not(.map) a img:hover {
  transform: translateY(-0.7em);
}
#main #contacts .map {
  overflow: hidden;
}
#main #contacts .map a {
  display: flex;
  flex-direction: column;
  align-items: center; 
}
#main #contacts .map a img {
  transition: .5s ease;
}
#main #contacts .map p {
  text-align: center;
  position: relative;
  top: -5em;
  background-color: #9190907e;
  border-radius: 8px;
  opacity: 0;
  transition: .4s ease;
  color: white;
  height: 2em;
  width: 7em;
  line-height: 2em;
}
#main #contacts .map:hover a img {
  transform: scale(1.2);
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
#main #contacts .map:hover a p {
  opacity: 1;
}
#main #contacts .map:hover a p:hover {
  background-color: dodgerblue;
}
#main #greets {
  padding-top: 7em; /* to fix anchor element*/
  margin: -6em 1em 1em 1em;
  grid-area: 1 / 2 / span 1 / span 1;
}
#main #greets p {
  line-height: 1.9em;
}
#main #greets .buttons {
  display: flex;
  justify-content: space-around;
  margin-top: 2em;
}
#main #greets .buttons div {
  position: relative;
  margin-right: 0.5em;
}
#main #greets .buttons div h2 {
  border-radius: 8px;
  background-color: #f1f1f1;
  padding: 0.5em 1em;
  font-size: 1.15em;
  text-align: center;
  cursor: pointer;
}
#main #greets .buttons .bt div {
  position: absolute;
  width: 100%;
}
#main #greets .buttons .bt a  {
  display: block;
  pointer-events: none;
  text-align: center;
  opacity: 0;
  transition: .4s ease;
  line-height: 1.5em;
  border-radius: 8px;
  background-color: #f1f1f1;
  margin: 0.5em 0.6em 0.6em 0.6em;
  padding: 0.5em;
  font-size: 0.8em;
}
#main #greets .buttons .bt:hover a {
  opacity: 1;
  transform: translateY(0.4em);
  pointer-events: auto;
}
#main #greets .buttons .bt:hover a:hover, #main #greets .buttons .bt h2:hover, #main #greets .buttons .single h2:hover {
  background-color: dodgerblue;
  color: white;
}

#main #comunications {
  padding-top: 7em; /* to fix anchor element*/
  margin: -6em 1em 1em 1em;
  grid-area: 2 / 2 / span 1 / span 1;
}

.footer {
  background-color: #f1f1f1;
  text-align: right;
  padding-top: 3em;
}
/* ... */

